--- a/package.json
+++ b/package.json
@@ -5,11 +5,14 @@
   "dependencies": {
     "antd-mobile": "^2.2.14",
     "axios": "^0.19.0",
+    "classnames": "^2.2.6",
     "node-sass": "^4.12.0",
+    "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1",
+    "react-spring": "^8.0.27",
     "react-virtualized": "^9.21.1"
   },
   "scripts": {
