--- a/package.json
+++ b/package.json
@@ -1,39 +1,47 @@
 {
-  "name": "react-hkzf",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "antd-mobile": "^2.2.14",
-    "axios": "^0.19.0",
-    "classnames": "^2.2.6",
-    "node-sass": "^4.12.0",
-    "prop-types": "^15.7.2",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
-    "react-router-dom": "^5.0.1",
-    "react-scripts": "3.0.1",
-    "react-spring": "^8.0.27",
-    "react-virtualized": "^9.21.1"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": "react-app"
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  }
+    "name": "react-hkzf",
+    "version": "0.1.0",
+    "private": true,
+    "dependencies": {
+        "antd-mobile": "^2.2.14",
+        "axios": "^0.19.0",
+        "classnames": "^2.2.6",
+        "formik": "^1.5.8",
+        "lodash": "^4.17.15",
+        "node-sass": "^4.12.0",
+        "prop-types": "^15.7.2",
+        "react": "^16.8.6",
+        "react-dom": "^16.8.6",
+        "react-router-dom": "^5.0.1",
+        "react-scripts": "3.0.1",
+        "react-spring": "^8.0.27",
+        "react-virtualized": "^9.21.1",
+        "yup": "^0.27.0"
+    },
+    "scripts": {
+        "start": "react-app-rewired start",
+        "build": "react-app-rewired build",
+        "test": "react-app-rewired test",
+        "eject": "react-scripts eject"
+    },
+    "eslintConfig": {
+        "extends": "react-app"
+    },
+    "browserslist": {
+        "production": [
+            ">0.2%",
+            "not dead",
+            "not op_mini all"
+        ],
+        "development": [
+            "last 1 chrome version",
+            "last 1 firefox version",
+            "last 1 safari version"
+        ]
+    },
+    "devDependencies": {
+        "babel-plugin-import": "^1.12.0",
+        "customize-cra": "^0.4.1",
+        "react-app-rewired": "^2.1.3"
+    }
 }
